--- a/T9dekoder.html
+++ b/T9dekoder.html
@@ -5,10 +5,11 @@
 	<body>
 		<center><h1>Rufnummer zu Wort</h1></center>
 		<div>
-			<input id="input" oninput="calc()"></input>
-			<input type="file" name="inputfile"
-			id="inputfile">
-			<br>
+			<h2>1. Wortlisten .txt Datei auswählen:</h2>
+			<input type="file" name="inputfile" id="inputfile">
+			<hr>
+			<h2>2. Nummer eingeben</h2>
+			<input id="input" oninput="calc()"></input> &emsp;&emsp;
 			<input type="checkbox" id="check" onchange="calc()">Zeige nur exakte Treffer.
 		</div>
 		<div id="output">
