--- a/T9dekoder.html
+++ b/T9dekoder.html
@@ -45,13 +45,13 @@
 				for (var i = 0; i<input.value.length; i++){
 					if(input.value.charAt(i) == 0) combo.push("_")
 					if(input.value.charAt(i) == 1) combo.push("_")
-					if(input.value.charAt(i) == 2) combo.push("abc")
+					if(input.value.charAt(i) == 2) combo.push("abcä")
 					if(input.value.charAt(i) == 3) combo.push("def")
 					if(input.value.charAt(i) == 4) combo.push("ghi")
 					if(input.value.charAt(i) == 5) combo.push("jkl")
-					if(input.value.charAt(i) == 6) combo.push("mno")
+					if(input.value.charAt(i) == 6) combo.push("mnoö")
 					if(input.value.charAt(i) == 7) combo.push("pqrs")
-					if(input.value.charAt(i) == 8) combo.push("tuv")
+					if(input.value.charAt(i) == 8) combo.push("tuvü")
 					if(input.value.charAt(i) == 9) combo.push("wxyz")
 				}
 
